--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,17 +29,17 @@
         android:layout_width="73dp"
         android:layout_height="67dp"
         android:layout_marginTop="28dp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toStartOf="@+id/txtPassword"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:srcCompat="@drawable/img_1" />
 
     <EditText
         android:id="@+id/txtPassword"
-        android:layout_width="171dp"
-        android:layout_height="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
-        android:layout_marginEnd="104dp"
+        android:layout_marginEnd="48dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
